css/style.css
:root {
  --bg-color: #0c1317;
  --main-color: #222e35;
  --side-panel: #111b21;
  --navbar-color: #202c33;
  --searchbar-color: #202c33;
  --button-bg-color: #00a884;
  --button-hover-bg-color: #06cf9c;
  --notification-color: #00a884;
  --main-font-family: "Segoe UI", sans-serif;
  --white-color: rgb(255, 255, 255);
  --text-primary-color: rgba(233, 237, 239, 0.88);
  --text-secondary-color: #8696a0;
  --text-secondary-light-color: #54656f;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

a {
  text-decoration: none;
  color: inherit;
}

body {
  font-family: var(--main-font-family);
  color: var(--white-color);
  background-color: var(--bg-color);
  display: grid;
  grid-template-columns: 60px auto;
  height: 95vh;
  width: 90vw;
  margin: auto;
  margin-top: 1.8rem;
}

header {
  background-color: var(--navbar-color);
}

nav {
  height: 95vh;
  width: 60px;
  padding: 0 1.2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background-color: var(--navbar-color);
}

.navbar__icon {
  position: relative;
  margin-top: 1rem;
  padding: 0.8rem;
  text-align: center;
  color: #a8b4bb;
  cursor: pointer;
}

.navbar__icon--active {
  background-color: #374248;
  border-radius: 50%;
  text-align: center;
}

.navbar__icon__bubble {
  position: absolute;
  top: 0;
  right: 0;
  width: 17px;
  background-color: var(--notification-color);
  color: rgb(0, 0, 0);
  font-weight: bold;
  border-radius: 25px;
  padding: 0.2rem 0;
}

.navbar__hr {
  margin: 1.6rem 0.8rem 0.8rem 0.8rem;
}

.navbar__icon__useravatar {
  border-radius: 50%;
  object-fit: cover;
  width: 32px;
  height: 32px;
}

.main__wrapper {
  display: flex;
}

.sidebar {
  max-width: 45%;
  background-color: var(--side-panel);
  height: 95vh;
  font-stretch: 100%;
}

.sidebar__header,
.sidebar__header__options {
  display: flex;
  justify-content: space-between;
}

.sidebar__header {
  padding: 1rem 2rem 1rem 2.5rem;
}

.sidebar__header__title {
  font-size: 2.2rem;
  font-weight: 700;
  padding-top: 0.6rem;
}

.sidebar__header__options__icons {
  padding: 0.8rem;
  color: rgb(174, 186, 193);
  cursor: pointer;
}

.sidebar__search {
  padding-left: 1.2rem;
  display: flex;
  align-items: center;
}

.sidebar__searchbar__wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 3.5rem;
  width: 100%;
  gap: 1rem;
  background-color: var(--searchbar-color);
  padding: 1rem 2rem;
  border-radius: 14px;
}

.sidebar__searchbtn {
  padding-top: 0.2rem;
  color: #8696a0;
}

.sidebar__form {
  width: 100%;
}

.sidebar__searchbar__filterbtn {
  margin: 0 0.8rem;
  color: rgb(134, 150, 160);
  cursor: pointer;
}

.sidebar__form__input {
  height: 80%;
  width: 100%;
  background-color: inherit;
  border: none;
  color: #8696a0;
  font-size: 1.3rem;
}

.sidebar__form__input:focus-visible,
.sidebar__form__input:focus {
  border: none;
  outline: none;
}

.sidebar__chatlist {
  margin: 0.8rem 0;
}

.card__wrapper {
  display: flex;
  padding: 0 0.5rem;
}

.card__wrapper:hover,
.active {
  background-color: var(--searchbar-color);
  cursor: pointer;
}

.card__avatar {
  width: 15%;
  margin: auto 0 0.8rem auto;
  padding: 0.8rem;
}

.card__info {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid #222d34;
  width: 100%;
  padding: 0.8rem;
}

.card__avatar img {
  border-radius: 50%;
  width: 100%;
}

.card__info__username {
  font-size: 1.7rem;
  font-weight: 400;
  color: rgb(209, 215, 219);
}

.card__info__msg {
  font-size: 1.3rem;
  font-weight: 400;
  display: flex;
  align-items: baseline;
  color: rgb(134, 150, 160);
  gap: 5px;
}

.card__info__msg__status {
  margin-top: 0.5rem;
}

.card__info__msg p {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.card__side__time {
  display: flex;
  align-items: center;
  font-size: 1.2rem;
  color: #8696a0;
  text-align: center;
}

.card__side__extra {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.card__side__extra__icon {
  display: none;
}

.card__wrapper:hover
  > .card__info
  > .card__side
  > .card__side__extra
  > .card__side__extra__icon {
  display: block;
}

.chatbox {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  background-color: var(--main-color);
  height: 95vh;
}

.chatbox__header {
  width: 100%;
  height: 59px;
  display: flex;
  align-items: center;
  background-color: var(--navbar-color);
  padding: 1rem 1.6rem;
}

.chatbox--intro {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  background-color: var(--main-color);
  height: 95vh;
}

.chatbox__header--intro {
  min-width: 66px;
}

.chatbox__main--intro {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.chatbox__main--intro__img {
  width: 30%;
}

.chatbox__main--intro__img img {
  width: 100%;
}

.chatbox__main--intro__txt {
  text-align: center;
}

.chatbox__main--intro__txt h2 {
  margin: 3.8rem;
  font-size: 4rem;
  font-weight: 100;
  color: var(--text-primary-color);
}

.chatbox__main--intro__txt p {
  margin: 2.4rem;
  font-size: 1.5rem;
  font-weight: 100;
  color: var(--text-secondary-color);
}

.chatbox__main--intro__btn button {
  padding: 10px 24px;
  border: none;
  border-radius: 24px;
  background-color: var(--button-bg-color);
  font-size: 1.4rem;
  font-weight: 500;
}

.chatbox__main--intro__btn button:hover {
  background-color: var(--button-hover-bg-color);
  cursor: pointer;
  transition: 0.18s;
  transition-timing-function: ease;
}

.chatbox__footer--intro {
  display: flex;
  justify-content: center;
  gap: 0.5rem;
  font-size: 1.4rem;
  color: var(--text-secondary-light-color);
  min-width: 20px;
  margin-bottom: 4.5rem;
  width: 100%;
}

.chatbox__header__useravatar {
  width: 5.5%;
  min-width: 60px;
  padding-right: 1.9rem;
}

.chatbox__header__useravatar img {
  width: 100%;
  border-radius: 50%;
}

.chatbox__header__userinfo .username {
  font-size: 1.6rem;
  font-weight: 700;
}

.chatbox__header__userinfo .last_connection {
  font-size: 1.3rem;
  color: var(--text-secondary-color);
}

.chatbox__main--bg {
  width: 100%;
  height: 100%;
  background-image: url(../img/chat-bg.jpg);
  background-size: contain;
  background-repeat: repeat;
}

.chatbox__footer,
.chatbox__footer__msg {
  display: flex;
  align-items: center;
}

.chatbox__footer {
  width: 100%;
  height: 51px;
  justify-content: space-around;
  background-color: var(--navbar-color);
  gap: 2rem;
  padding: 0.8rem 1.6rem;
}

.chatbox__footer__msg {
  flex-grow: 1;
  background-color: #2a3942;
  padding: 1.2rem 0.9rem;
  border-radius: 14px;
}

.chatbox__footer__msg form,
.chatbox__footer__input {
  width: 100%;
}

.chatbox__footer__input {
  background-color: inherit;
  border: none;
  color: rgb(209, 215, 219);
  font-size: 1.5rem;
}

.chatbox__footer__input:focus-visible {
  outline: none;
}

.chatbox__footer__emojisicon {
  padding-right: 1rem;
  cursor: pointer;
  color: rgb(174, 186, 193);
}

.chatbox__footer__moreoptionsicon,
.chatbox__footer__audioicon,
.chatbox__footer__sendicon {
  margin: 0.8rem;
  cursor: pointer;
  color: rgb(174, 186, 193);
}

.sidebar__chatlist--newmsg .card__info__wrapper,
.sidebar__chatlist--newmsg .card__info__msg,
.sidebar__chatlist--newmsg .card__info__username {
  font-weight: 700;
  color: #e9edef;
}

.sidebar__chatlist--newmsg .card__side .card__side__time {
  color: var(--notification-color);
  font-weight: 700;
}

.card__wrapper img {
  min-width: 44px;
  min-height: 44px;
}

.card__side__extra {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 2px;
}

.sidebar__newmsgicon {
  width: 17px;
  font-weight: 700;
  background-color: var(--notification-color);
  color: rgb(0, 0, 0);
  border-radius: 25px;
  padding: 0.3rem 0;
  margin-top: 0.4rem;
  text-align: center;
}

nav,
.sidebar {
  border-right: 1px solid #2f3b43;
}

.chatbox__main {
  padding: 1rem .5rem;
  display: flex;
  flex-direction: column;
  justify-content: end;
  row-gap: 2px;
  height: 465px;
}

.chatbox__msglog {
  font-size: 1.25rem;
  
  overflow-x: hidden;
}

.chatbox__msg__wrapper{
  display: grid;
  padding: 0 3rem;
}

.chatbox__msglog__msgbox {
  margin: 1.5rem 0;
  padding: 1rem 0.8rem;
  max-width: 50%;
  position: relative;
}

.chatbox__msglog__msgbox--date {
  text-align: center;
  justify-self: center;
}

.msglog_date {
  padding: 1rem;
  border-radius: 1.4rem;
  color: rgb(134, 150, 160);
  background-color: rgb(24, 34, 41);
  text-align: center;
}

.chatbox__msglog__msgbox--self {
  border-radius: 14px 0 14px 14px;
  background-color: rgb(0, 92, 75);
  justify-self: right;
}

.chatbox__msglog__msgbox--other .msg__timestatus .double__tick {
  display: none;
}

.chatbox__msglog__msgbox--other {
  border-radius: 0 14px 14px 14px;
  background-color: rgb(32, 44, 51);
  text-align: left;
  justify-self: left;
}

.msg p {
  font-size: 1.4rem;
  color: white;
  line-height: 1.9rem;
}

.msg__timestatus {
  display: flex;
  padding-top: 5px;
  align-items: end;
  gap: 2px;
}

.msg__timestatus p {
  font-size: 1.1rem;
  color: rgba(255, 255, 255, 0.6);
}

.msg {
  display: flex;
  gap: 5px;
}

.blank_space {
  display: block;
  width: 10px;
  height: 1.4rem;
}

.tail-out {
  position: absolute;
  right: -7px;
  top: 0;
  color: rgb(0, 92, 75);
}

.tail-in {
  position: absolute;
  left: -7px;
  top: 0;
  color: rgb(32, 44, 51);
}

.double__tick--read {
  color: #51a9d1;
}

.double__tick--unread {
  color: #7eada4;
}

.card__info__msg__status--notick {
  display: none;
}

/* Estilos para la barra de desplazamiento */
::-webkit-scrollbar {
  width: 7px; /* Ancho de la barra de desplazamiento */
  
}

/* Estilos para el riel de la barra de desplazamiento */
::-webkit-scrollbar-track {
  background: transparent; /* Color de fondo del riel */
  border-radius: 7px;
  
}

/* Estilos para el pulgar de la barra de desplazamiento */
::-webkit-scrollbar-thumb {
  background: rgba(62, 63, 63, 0.7); /* Color del pulgar */
  border-radius: 7px;

}

/* Estilos cuando el usuario pasa el ratón sobre el pulgar de la barra de desplazamiento */
::-webkit-scrollbar-thumb:hover {
  background: #555; /* Color del pulgar al pasar el ratón */
}

